@@ -219,6 +219,7 @@ cifs_create(struct inode *inode, struct dentry *direntry, int mode,
 				pCifsFile->pid = current->tgid;
 				pCifsFile->pInode = newinode;
 				pCifsFile->invalidHandle = FALSE;
+				pCifsFile->closePend     = FALSE;
 				/* pCifsFile->pfile = file; */ /* put in at open time */
 				write_lock(&GlobalSMBSeslock);
 				list_add(&pCifsFile->tlist,&pTcon->openFileList);
